--- a/client/package.json
+++ b/client/package.json
@@ -11,19 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/cli": "~8.3.20",
     "@angular-devkit/build-angular": "~0.803.20",
     "@angular/language-service": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/cli": "~8.3.20",
     "@angular/animations": "~8.2.14",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/http": "~7.2.15",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "chart.js": "^2.9.3",
+    "core-js": "^3.6.1",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.4.0",
     "typescript": "~3.5.3",
@@ -31,9 +33,9 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
