--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "fullstack app angular and express",
   "main": "index.js",
   "engines": {
-    "node":"13.2.0",
-    "npm":"6.13.1"
+    "node": "13.2.0",
+    "npm": "6.13.1"
   },
   "scripts": {
     "start": "node index",
@@ -22,20 +22,23 @@
   "author": "Vladislav",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.7.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "browserslist": "^4.11.1",
+    "caniuse-lite": "^1.0.30001043",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.12",
-    "morgan": "^1.9.1",
+    "mongoose": "^5.9.9",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "concurrently": "^5.0.0",
-    "nodemon": "^2.0.1"
+    "concurrently": "^5.1.0",
+    "nodemon": "^2.0.3"
   }
 }
